[package]
name = "find-dl"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simple tool to get the last downloaded file(s)"
authors = ["Jonathan Dönszelmann <jonathan@donsz.nl>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
path = "./src/main.rs"
name = "dl"

[dependencies]
clap = {version = "4.5", features = ["derive"]}
color-eyre = "0.6"
home = "0.5"
